# quest

./: .gitignore  .pre-commit-config.yaml  ELT_POC.ipynb  Part1Notebook.ipynb  Part1_Solution  Part2.py  Part2Notebook.ipynb  Part3.py  Part3Notebook.ipynb  Part4.py  README.SOLUTION.md  README.TOOLKIT.md  README.md  productivity_population_analysis.ipynb  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.aws-sam/: build.toml  sync.toml
.aws-sam/auto-dependency-layer/: adl_nested_template.yaml  template.yaml
.aws-sam/auto-dependency-layer/FileSyncerFunction/: file_syncer.py
.aws-sam/auto-dependency-layer/FileSyncerFunction1731c9a4DepLayer/: AWS_SAM_CLI_README
.aws-sam/pipeline/: pipelineconfig.toml
.github/workflows/: cicd-workflow.yaml  pipeline.yaml  pre-commit.yaml
dan-rearc-dataquest/: README.TOOLKIT.md  README.md  samconfig.toml
functions/data_syncer/: app.py  data_syncer.py  requirements.txt
functions/file_syncer/: app.py  file_syncer.py  requirements.txt
functions/reporter/: app.py  reporter.py  requirements.txt
infra/: app.py  requirements.txt  stack.py
infra/lambda/: processing.py
infra/lambda/ingestion/: ingestion.py  requirements.txt
infra/stacks/: rearc_quest_stack.py  trust_stack.py
lambda/: ingestion.py
notebooks/: productivity_population_analysis.ipynb
statemachine/: rearc_data_quest.asl.json
terraform/: main.tf
tests/integration/: test_state_machine.py
tests/unit/: test_data_syncer.py  test_file_syncer.py  test_reporter.py
tmp/2024-06-06/: pr.data.0.Current  pr.data.1.AllData  pr.series
(+5 files in other folders)
