[tool.poetry]
name = "rearc-data-quest"
version = "0.1.0"
description = ""
authors = ["Dan Noventa <daniel.a.noventa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
botocore = "^1.34.123"
boto3 = "^1.34.122"
pyspark = "^3.5.1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest-mock = "^3.14.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
